DS-4380 Update build to work with JDK 11